2013-11-15  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* doc/invoke.texi (-mabi=elfv1, -mabi=elfv2): Document.

2013-11-15  Joseph Myers  <joseph@codesourcery.com>

	* acinclude.m4 (GCC_GLIBC_VERSION_GTE_IFELSE): New configure
	macro.
	* configure.ac: Determine target_header_dir earlier.
	(--with-glibc-version): New configure option.
	Use GCC_GLIBC_VERSION_GTE_IFELSE in enable_gnu_unique_object,
	gcc_cv_libc_provides_ssp and gcc_cv_target_ldbl128 tests.
	* configure: Regenerate.
	* doc/install.texi (--enable-gnu-unique-object): Don't refer to
	native toolchains for default.
	(--with-glibc-version): Document.

2013-11-15  Eric Botcazou  <ebotcazou@adacore.com>

	* fold-const.c (fold_binary_loc) <comparisons>: Reuse local variable.

2013-11-15  Uros Bizjak  <ubizjak@gmail.com>

	* lto-streamer-in.c (input function): Call cgraph_create_node if
	cgraph_get_node failed.

2013-11-14   Olivier Hainque  <hainque@adacore.com>

	* cfgexpand.c (defer_stack_allocation): When optimization is enabled,
	defer allocation of DECL_IGNORED_P variables at toplevel unless really
	small.  Factorize size threshold computation from the existing one.
	(expand_used_vars): Refine comment.

2013-11-14  Cong Hou  <congh@google.com>

	* tree-vectorizer.h (struct dr_with_seg_len): Remove the base
	address field as it can be obtained from dr.  Rename the struct.
	* tree-vect-data-refs.c (comp_dr_with_seg_len_pair): Consider
	steps of data references during sort.
	(vect_prune_runtime_alias_test_list): Adjust with the change to
	struct dr_with_seg_len.
	* tree-vect-loop-manip.c (vect_create_cond_for_alias_checks):
	Adjust with the change to struct dr_with_seg_len.

2013-11-14  Jeff Law  <law@redhat.com>

	PR middle-end/59127
	* basic-block.h (has_abnormal_outgoing_edge_p): Moved here from...
	* tree-inline.c (has_abnormal_outgoing_edge_p): Remove.
	* gimple-ssa-isolate-paths.c: Include tree-cfg.h.
	(find_implicit_erroneous_behaviour): If a block has abnormal outgoing