@@ -1724,8 +1724,7 @@ tree_loop_distribution (void)
 	      if (stmt_has_scalar_dependences_outside_loop (loop, stmt))
 		;
 	      /* Otherwise only distribute stores for now.  */
-	      else if (!gimple_assign_single_p (stmt)
-		       || is_gimple_reg (gimple_assign_lhs (stmt)))
+	      else if (!gimple_vdef (stmt))
 		continue;
 
 	      work_list.safe_push (stmt);
